# linkos

./: .gitignore  README.md  config.toml  pyproject.toml
app/dashboard/: components.json  package-lock.json  package.json  pnpm-lock.yaml
app/dashboard/app/: globals.css  layout.tsx  page.tsx
app/dashboard/components/: ConnectionSettings.tsx  (+2 more)
app/hub/: .env.example  .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/dashboard/: middleware.ts  package.json
apps/hub/: .env.example  package-lock.json  tsconfig.json
examples/: README.md  adk.py  agent.py  main.py  mcp_utils.py  pyproject.toml
linkos/: __init__.py  cli.py  gateway.py
linkos/agui/: client.py
linkos/clients/: __init__.py  discord.py
linkos/core/: __init__.py  cli.py  gateway.py
linkos/models/: message.py  session.py
linkos/python/: .gitignore  README.md  pyproject.toml
linkos/python/linkos/: __init__.py
linkos/python/linkos/agents/: __init__.py
linkos/python/linkos/clients/: telegram.py
linkos/python/linkos/models/: session.py
linkos/python/linkos/services/: agent.py
linkos/python/src/: __init__.py
linkos/python/src/agui/: __init__.py
linkos/python/src/clients/: discord.py  telegram.py  whatsapp.py
linkos/python/src/core/: gateway.py
linkos/python/src/models/: __init__.py
linkos/python/src/services/: router.py
linkos/services/: __init__.py  router.py  session.py
linkos/typescript/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
supabase/migrations/: 20240217_rpc_increment_usage.sql
typescript/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
(+30 files in other folders)
