[project]
name = "linkos"
version = "0.1.0"
description = "Multi-platform messaging gateway - WebSocket-based AI agent connector"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click>=8.1.7",
    "python-telegram-bot>=21.0",
    "discord.py>=2.3.2",
    "slack-bolt>=1.18.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    # AG-UI Protocol
    "ag-ui-protocol>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
linkos = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.hatch.build.targets.wheel.force-include]
"src" = "linkos"
